[gd_scene load_steps=10 format=2]

[ext_resource path="res://Environment/plants.png" type="Texture" id=1]
[ext_resource path="res://UI/icons.png" type="Texture" id=2]
[ext_resource path="res://GameInterface.gd" type="Script" id=3]
[ext_resource path="res://Witch/WitchSheet.png" type="Texture" id=4]

[sub_resource type="TileSet" id=1]
0/name = "plants.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "plants.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "plants.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "plants.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "plants.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 2, 7, 11, 9 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 35, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 3, 9, 11 )

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 65536, 0, 0, 65545, 0, 0, 131072, 0, 0, 131081, 0, 0, 196608, 0, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196617, 0, 0, 262144, 0, 0, 262153, 0, 0, 327680, 0, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 3, 0, 327687, 3, 0, 327689, 0, 0, 393216, 0, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393225, 0, 0, 458752, 0, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458761, 0, 0, 524288, 0, 0, 524291, 1, 0, 524294, 1, 0, 524297, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0 )

[node name="Witch" type="Sprite" parent="."]
texture = SubResource( 5 )
centered = false

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BtnUp" type="TextureButton" parent="UI"]
margin_left = 24.0
margin_top = 251.0
margin_right = 46.0
margin_bottom = 269.0
action_mode = 0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 2 )
texture_focused = SubResource( 2 )
expand = true
stretch_mode = 4

[node name="BtnDown" type="TextureButton" parent="UI"]
margin_left = 24.0
margin_top = 291.0
margin_right = 46.0
margin_bottom = 309.0
action_mode = 0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 3 )
texture_disabled = SubResource( 3 )
expand = true
stretch_mode = 4

[node name="BtnRight" type="TextureButton" parent="UI"]
margin_left = 46.0
margin_top = 269.0
margin_right = 64.0
margin_bottom = 291.0
action_mode = 0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 4 )
texture_disabled = SubResource( 4 )
expand = true
stretch_mode = 4

[node name="BtnLeft" type="TextureButton" parent="UI"]
margin_left = 6.0
margin_top = 269.0
margin_right = 24.0
margin_bottom = 291.0
action_mode = 0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 4 )
texture_disabled = SubResource( 4 )
expand = true
stretch_mode = 4
flip_h = true

[connection signal="pressed" from="UI/BtnUp" to="." method="_on_BtnUp_pressed"]
[connection signal="pressed" from="UI/BtnDown" to="." method="_on_BtnDown_pressed"]
[connection signal="pressed" from="UI/BtnRight" to="." method="_on_BtnRight_pressed"]
[connection signal="pressed" from="UI/BtnLeft" to="." method="_on_BtnLeft_pressed"]
